--- a/accounting-cards/index.html
+++ b/accounting-cards/index.html
@@ -20,7 +20,7 @@
             <div class="col-12 my-4">
                 <h1>歡迎回來</h1>
             </div>
-            <div class="col-lg-3 col-md-4 col-sm-6 col-12" v-for="card in cards.list.data">
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12 mt-2" v-for="card in cards.list.data">
                 <div class="card" type="button" @click.prevent="getCard(card.Guid)">
                     <div class="card-body">
                         <h3>{{card.Name}}</h3>
@@ -32,6 +32,18 @@
                             </tr>
                             </tbody>
                         </table>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6 col-12 mt-2">
+                <div class="card">
+                    <div class="card-body">
+                        <h3>
+                            <div class="input-group input-group-lg" @keyup.enter="addCard">
+                                <input type="text" class="form-control" v-model="cards.add.name">
+                            </div>
+                        </h3>
+                        <p class="mb-0 mt-3 fw-light text-muted">按下Enter來建立卡片</p>
                     </div>
                 </div>
             </div>
@@ -73,6 +85,7 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script src="https://unpkg.com/vue@next"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 <script>
     const app = Vue.createApp({
@@ -88,6 +101,9 @@
                         card:{},
                         hidden: true,
                     },
+                    add:{
+                        name: ''
+                    }
                 }
             }
         },
@@ -128,6 +144,29 @@
                     url: `./api/detail/list/${guid}`
                 }).then(res => {
                     vm.cards.item.data = res.data;
+                }).catch(err => {
+                    console.log(err);
+                })
+            },
+            addCard: function () {
+                let vm = this;
+                
+                if (vm.cards.add.name === '' || vm.cards.add.name.trim() === ''){
+                    Swal.fire({
+                        icon: 'error',
+                        text: '卡片名稱不能留白',
+                        showConfirmButton: false,
+                        timer: 2000,
+                    })
+                    return;
+                }
+                
+                axios({
+                    method: 'post',
+                    url: `./api/card/new/${vm.cards.add.name}`
+                }).then(res => {
+                    vm.cards.list.data.push(res.data);
+                    vm.cards.add.name = '';
                 }).catch(err => {
                     console.log(err);
                 })
