更新：明細新增完畢後恢復表單預設值

--- a/accounting-cards/index.html
+++ b/accounting-cards/index.html
@@ -297,6 +297,12 @@
                     vm.cards.item.data = res.data;
                 }).catch(err => {
                     console.log(err);
+                }).then(() => {
+                    vm.cards.item.add.name = '';
+                    vm.cards.item.add.day = new Date().toJSON().substring(0,10);
+                    vm.cards.item.add.time = '00:00';
+                    vm.cards.item.add.count = 0;
+                    vm.cards.item.add.date = '';
                 })
             },
             backToHome: function () {
