更新：回到首頁後明細表單恢復預設值

--- a/accounting-cards/index.html
+++ b/accounting-cards/index.html
@@ -310,6 +310,12 @@
 
                 vm.cards.list.hidden = false;
                 vm.cards.item.hidden = true;
+
+                vm.cards.item.add.name = '';
+                vm.cards.item.add.day = new Date().toJSON().substring(0,10);
+                vm.cards.item.add.time = '00:00';
+                vm.cards.item.add.count = 0;
+                vm.cards.item.add.date = '';
             },
             formatDate: function (date) {
                 return `${date.split('T')[0]} ${date.split('T')[1].split('+')[0]}`
