--- a/accounting-cards/index.html
+++ b/accounting-cards/index.html
@@ -25,10 +25,12 @@
                 <div class="card" @click.prevent="getCard(card.Guid)">
                     <div class="card-body" type="button">
                         <h3 class="d-flex justify-content-between">
-                            {{card.Name}}
+                            <span>
+                                {{card.Name}}
+                            </span>
                             <span>
                                 <button type="button" class="btn btn-sm btn-outline-danger me-2" @click.prevent.stop="deleteCard(card.Guid)">刪除</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">編輯</button>
+                                <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#cardEditModal" @click.prevent.stop="setCardEditPage(card)">編輯</button>
                             </span>
                         </h3>
                         <table class="table table-borderless table-sm">
@@ -47,7 +49,7 @@
                     <div class="card-body">
                         <h3>
                             <div class="input-group input-group-lg" @keydown.enter="addCard">
-                                <input type="text" class="form-control" v-model="cards.add.name">
+                                <input type="text" class="form-control" v-model="cards.list.add.name">
                             </div>
                         </h3>
                         <p class="mb-0 mt-3 fw-light text-muted">按下Enter來建立卡片</p>
@@ -129,6 +131,28 @@
                     </tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+        
+        <!--卡片：編輯-->
+        <div class="modal fade" data-bs-backdrop="static" id="cardEditModal" tabindex="-1" aria-labelledby="cardEditModal" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="cardEditModalLabel">編輯</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="input-group">
+                            <label class="input-group-text">卡片名稱</label>
+                            <input type="text" class="form-control" v-model="cards.list.edit.name">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-outline-primary" data-bs-dismiss="modal" @click="updateCard(); getCards();">儲存</button>
+                    </div>
+                </div>
             </div>
         </div>
         
