--- a/accounting-cards/index.html
+++ b/accounting-cards/index.html
@@ -16,24 +16,29 @@
 
 <div id="app">
     <div class="container my-5">
-        <div class="row">
+        <!--輸入帳號-->
+        <div class="row" v-show="!user.session.get">
             <div class="col-12 my-4">
                 <h1>你好，這裡是記帳卡片。</h1>
             </div>
             <div class="col-md-4 col-12 mt-2">
                 <div class="card">
-                    <div class="card-body">
-                        <h3>
-                            <div class="input-group input-group-lg">
-                                <input type="text" class="form-control" v-model="user.info.account">
-                            </div>
-                        </h3>
-                        <p class="mb-0 mt-3 fw-light text-muted d-flex align-items-center justify-content-between">
-                            請輸入帳號來登入或是註冊
-                            <span>
-                                <button class="btn btn-outline-secondary btn-sm" @click.prevent="getSession">下一步</button>
-                            </span>
-                        </p>
+                    <div class="card-body" v-if="user.session.news == null && !user.session.news">
+                        <div class="input-group input-group-lg">
+                            <input type="text" class="form-control" v-model="user.info.id">
+                        </div>
+                        <div class="mb-0 fw-bold text-danger">
+                            <p class="mb-0 mt-3 fw-light text-muted" v-show="!user.info.error">請輸入ID登入，或是留空點擊下一步註冊</p>
+                            <p class="mb-0 mt-3 fw-light text-danger" v-show="user.info.error">ID不存在，請留空註冊一組新的ID</p>
+                        </div>
+                        <button class="btn btn-outline-secondary btn-sm float-end" @click.prevent="checkUser">下一步</button>
+                    </div>
+                    <div class="card-body" v-if="user.session.news">
+                        <div>
+                            <p class="mb-0 fw-bold text-danger">你的ID是：{{user.info.id}}</p>
+                            <p class="mb-0 fw-light text-muted">請記住這個ID，遺失無法補發</p>
+                        </div>
+                        <button class="btn btn-outline-secondary btn-sm float-end" @click.prevent="getCards">下一步</button>
                     </div>
                 </div>
             </div>
@@ -42,7 +47,10 @@
         <!--首頁：卡片清單-->
         <div class="row" v-show="!cards.list.hidden">
             <div class="col-12 my-4">
-                <h1>歡迎回來</h1>
+                <h1>
+                    歡迎回來
+                    <small><span>查詢我的ID</span></small>
+                </h1>
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 col-12 mt-2" v-for="card in cards.list.data">
                 <div class="card" @click.prevent="getCard(card.Guid)">
